Добавлен главный класс в манифест и пути к библиотекам с помощью maven plugin